--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 authors = ["Jacob Hughes <j@jacobhughes.me>"]
 edition = "2018"
 license = "GPL2.0+"
+
+[features]
+gui = ["parking_lot", "druid"]
+
 [package.metadata.android]
 target_sdk_version = 30
 
@@ -21,6 +25,8 @@ rodio = "0.11"
 serde = {version = "^1", features = ["derive"]}
 toml = "^0.5"
 chrono = {version = "^0.4", features = ["serde"]}
+druid = {version = "0.6", features = ["im"], optional = true}
+parking_lot = {version = "0.11", optional = true}
 
 [target.'cfg(target_os = "android")'.dependencies]
 ndk-glue = "0.1"
@@ -28,7 +34,7 @@ ndk = "0.1"
 
 [patch.crates-io]
 rodio = {git = "https://github.com/exrook/rodio"}
-cpal = {git = "https://github.com/exrook/cpal", branch="android" }
+cpal = {git = "https://github.com/exrook/cpal", branch="master" }
 ndk = {git = "https://github.com/rust-windowing/android-ndk-rs"}
 ndk-glue = {git = "https://github.com/rust-windowing/android-ndk-rs"}
 ndk-sys = {git = "https://github.com/rust-windowing/android-ndk-rs"}
